Node Groups sockets can't be created through python #26171

Closed
opened 2011-02-21 21:35:02 +01:00 by Dan Eicher · 3 comments
Member

%%%There's no way to create a new in/external socket in the new node group system using group.inputs.new(internal_node.inputs[0]).

I created a patch (and passed it on to phonybone a while back) that had all the rna wrappers necessary to make these new group types good py-citizens but it didn't make it into the trunk commit and I seem to have lost my copy.

Probably just got missed somewhere along the line...%%%

%%%There's no way to create a new in/external socket in the new node group system using group.inputs.new(internal_node.inputs[0]). I created a patch (and passed it on to phonybone a while back) that had all the rna wrappers necessary to make these new group types good py-citizens but it didn't make it into the trunk commit and I seem to have lost my copy. Probably just got missed somewhere along the line...%%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Member

%%%Fixed:
You can use the "new" and "expose" functions on group tree inputs and outputs to create new group sockets now. "nodetree.new(name, type)" creates a new unlinked group socket, while "nodetree.expose(socket)" makes a copy of the internal socket "socket" and adds an internal link to the new group socket.%%%

%%%Fixed: You can use the "new" and "expose" functions on group tree inputs and outputs to create new group sockets now. "nodetree.new(name, type)" creates a new unlinked group socket, while "nodetree.expose(socket)" makes a copy of the internal socket "socket" and adds an internal link to the new group socket.%%%
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#26171
No description provided.